--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -167,6 +167,7 @@
     <ClCompile Include="Firework.cpp" />
     <ClCompile Include="FireworkDisplay.cpp" />
     <ClCompile Include="LifeTimeSpawn.cpp" />
+    <ClCompile Include="OGLTextureManager.cpp" />
     <ClCompile Include="ParticleFactoryCommand.cpp" />
     <ClCompile Include="ParticleManager.cpp" />
     <ClCompile Include="ParticleManagerCommand.cpp" />
@@ -214,6 +215,7 @@
     <ClInclude Include="Firework.h" />
     <ClInclude Include="FireworkDisplay.h" />
     <ClInclude Include="LifeTimeSpawn.h" />
+    <ClInclude Include="OGLTextureManager.h" />
     <ClInclude Include="ParticleFactoryCommand.h" />
     <ClInclude Include="ParticleManager.h" />
     <ClInclude Include="ParticleManagerCommand.h" />
