--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -121,6 +121,9 @@
     <Filter Include="Header Files\Inputs">
       <UniqueIdentifier>{d47757bc-db93-4f79-8d50-a8675bd71f32}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\Behaviours\CollisionStrate">
+      <UniqueIdentifier>{0b69db95-f3a8-468a-8f7d-19e2d60ac98c}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -273,6 +276,9 @@
     <ClCompile Include="BasicWithCollision.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="OGLTextureManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Entity.h">
@@ -407,23 +413,23 @@
     <ClInclude Include="Spawner.h">
       <Filter>Header Files\Behaviours</Filter>
     </ClInclude>
-    <ClInclude Include="Collider.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="AABBCollider.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\Physics</Filter>
     </ClInclude>
-    <ClInclude Include="ColliderSpawn.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="CollisionStrategy.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="OutputConsoleCollision.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="Collider.h">
+      <Filter>Header Files\Physics</Filter>
     </ClInclude>
     <ClInclude Include="BasicWithCollision.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\Particle</Filter>
+    </ClInclude>
+    <ClInclude Include="ColliderSpawn.h">
+      <Filter>Header Files\Behaviours\Spawn</Filter>
+    </ClInclude>
+    <ClInclude Include="CollisionStrategy.h">
+      <Filter>Header Files\Behaviours\CollisionStrate</Filter>
+    </ClInclude>
+    <ClInclude Include="OutputConsoleCollision.h">
+      <Filter>Header Files\Behaviours\CollisionStrate</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
